<resources>
    <string name="app_name">Quit Smoking Habits</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_first_name">Voornaam</string>
    <string name="prompt_last_name">Achternaam</string>
    <string name="prompt_birthDate">Geboortedatum</string>
    <string name="action_register">Registreren</string>
    <string name="button_choose_date">Kies Geboortedatum</string>
    <string name="send_notification">Stuur Notificatie</string>
    <string name="send_timed_notification">Stuur Notificatie (na 1 minuut)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_select_app">SelectAppActivity</string>
    <string name="action_edit_profile">Pas profiel aan</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
