<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hva.groepje12.quitsmokinghabits.RegisterActivity">

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="5pt">

                <EditText
                    android:id="@+id/edit_text_birth_date"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_birthDate"
                    android:inputType="date"
                    android:layout_weight="1.16" />

                <Button
                    android:id="@+id/button_choose_date"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_choose_date"
                    android:onClick="datePicker"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="7pt"/>

            <Button
                android:id="@+id/button_send_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_notification"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_send_timed_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send_timed_notification"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
